--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=10000
 server.servlet.context-path=/spring-boot-input-output-storehouse
-server.tomcat.threads.max=5
+server.tomcat.threads.max=1
+#spring.mvc.async.request-timeout=1000
